syntax = "proto3";

package sonr.beam;
option go_package = "github.com/sonr-io/core/internal/beam";

enum EventType {
    NONE = 0;
    GET = 1;
    SET = 2;
    DELETE = 3;
    PUT = 4;
    EXPIRE = 5;
    PUSH = 6;
}

message Event {
    string peer = 1;
    EventType type = 2;
    StoreEntry entry = 3;
    Store store = 4;
}

message Store {
    map<string, StoreEntry> data = 1;
    int32 capacity = 2;
    int64 modified = 3;
    int64 ttl = 4;
}

message StoreEntry {
    string peer = 1;
    string key = 2;
    bytes value = 3;
    int64 expiration = 4;
    int64 created = 5;
    int64 modified = 6;
}
